--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 Flask-SQLAlchemy
 flask
-mysql-connector-python
-python-dotenv
+mysql-connector-python~=8.2.0
+python-dotenv~=1.0.0
 flask-restx
-pyjwt
-numpy
-requests
+pyjwt~=2.8.0
+numpy==1.26.2
+requests~=2.31.0
 flask-cors
 ttkbootstrap
+dropbox~=11.36.2
+xlrd
+pandas~=2.1.3
