--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Flask-SQLAlchemy
-flask
+flask~=2.3.3
 mysql-connector-python~=8.2.0
 python-dotenv~=1.0.0
 flask-restx
@@ -7,7 +7,10 @@ pyjwt~=2.8.0
 numpy==1.26.2
 requests~=2.31.0
 flask-cors
-ttkbootstrap
+ttkbootstrap~=1.10.1
 dropbox~=11.36.2
-xlrd
+xlrd~=2.0.1
 pandas~=2.1.3
+Unidecode~=1.3.7
+matplotlib~=3.8.1
+pyxlsb~=1.0.10
