--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask-SQLAlchemy
 flask~=2.3.3
 mysql-connector-python~=8.2.0
 python-dotenv~=1.0.0
+CTkTable~=0.8
 flask-restx
 pyjwt~=2.8.0
 numpy==1.26.2
@@ -14,3 +15,5 @@ pandas~=2.1.3
 Unidecode~=1.3.7
 matplotlib~=3.8.1
 pyxlsb~=1.0.10
+customtkinter~=5.2.1
+Pillow~=10.1.0
