--- a/files/settings.json
+++ b/files/settings.json
@@ -1,1 +1,1 @@
-{"max_chats": "40", "start_date": "19/oct./2023", "end_date": "19/oct./2023", "sampling_time": 1}
+{"max_chats": "40", "start_date": "19/oct./2023", "end_date": "19/oct./2023", "sampling_time": 1, "gui": {"null": {"theme": "litera"}, "RRHH": {"theme": "morph", "files_procces": "C:/Users/Edisson/OneDrive/Documentos/Telintec_files_departments/RH", "files_cache": "C:/Users/Edisson/OneDrive/Documentos/Telintec_files_departments/RH"}}}
