--- a/static/ventanasAppGUI.json
+++ b/static/ventanasAppGUI.json
@@ -36,7 +36,6 @@
       "Inventario Int.",
       "Ordenes (A)",
       "Configuraciones (A)",
-      "SM",
       "Procesar SM",
       "Cuenta"
     ],
@@ -59,6 +58,7 @@
       "Clients (A)",
       "Proveedores (A)",
       "SM",
+      "Procesar SM",
       "Cuenta"
     ]
   },
