--- a/static/ventanasAppGUI.json
+++ b/static/ventanasAppGUI.json
@@ -12,7 +12,7 @@
     "App.Department.RRHH": [
       "Inicio",
       "Fichajes",
-      "Examenes",
+      "Exámenes",
       "Emp. Detalles",
       "Vacaciones",
       "Empleados",
