--- a/files/settings.json
+++ b/files/settings.json
@@ -14,7 +14,8 @@
       ],
       "theme": "morph",
       "files_procces": "C:\/Users\/Edisson\/OneDrive\/Documentos\/Telintec_files_departments\/RH",
-      "files_cache": "C:\/Users\/Edisson\/OneDrive\/Documentos\/Telintec_files_departments\/RH"
+      "files_cache": "C:\/Users\/Edisson\/OneDrive\/Documentos\/Telintec_files_departments\/RH",
+      "files_quizz_out": "\/files\/quizz_out\/"
     },
     "default": {
       "theme": "morph"
