frames review encuestas update

--- a/files/settings.json
+++ b/files/settings.json
@@ -15,7 +15,7 @@
       "theme": "morph",
       "files_procces": "C:\/Users\/Edisson\/OneDrive\/Documentos\/Telintec_files_departments\/RH",
       "files_cache": "C:\/Users\/Edisson\/OneDrive\/Documentos\/Telintec_files_departments\/RH",
-      "files_quizz_out": "\/files\/quizz_out\/"
+      "files_quizz_out": "\/files\/quizz_out"
     },
     "default": {
       "theme": "morph"
