--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,26 @@
-Flask-SQLAlchemy
-flask
-mysql-connector-python
-python-dotenv
-flask-restx
-pyjwt~=2.8.0
-numpy
-requests
-flask-cors
-ttkbootstrap
-dropbox
+Flask-SQLAlchemy~=3.1.1
+Flask~=2.3.3
+mysql-connector-python~=8.2.0
+python-dotenv~=1.0.0
+flask-restx~=1.2.0
+PyJWT~=2.8.0
+numpy~=1.26.2
+requests~=2.31.0
+Flask-Cors~=4.0.1
+ttkbootstrap~=1.10.1
+dropbox~=11.36.2
 xlrd~=2.0.1
-pandas
+pandas~=2.1.3
 Unidecode~=1.3.7
-matplotlib
+matplotlib~=3.8.1
 pyxlsb~=1.0.10
-customtkinter
-Pillow
-openai
-bardapi
-SQLAlchemy
-reportlab
+customtkinter~=5.2.1
+Pillow~=10.1.0
+openai~=1.22.0
+bardapi~=0.1.38
+SQLAlchemy~=2.0.23
+reportlab~=4.1.0
 setuptools
+keras~=3.3.3
+tensorflow~=2.16.1
+scikit-learn~=1.5.0
