--- a/static/ventanasAppGUI.json
+++ b/static/ventanasAppGUI.json
@@ -35,7 +35,8 @@
       "Proveedores",
       "SM",
       "Cotizaciones",
-      "Documentos Contrato"
+      "Documentos Contrato",
+      "Control Saldos"
     ],
     "App.Department.Common": [
       "Tasks"
