--- a/files/settings.json
+++ b/files/settings.json
@@ -18,7 +18,10 @@
       "theme": "morph",
       "files_procces": "C:\/Users\/Edisson\/OneDrive\/Documentos\/Telintec_files_departments\/RH",
       "files_cache": "C:\/Users\/Edisson\/OneDrive\/Documentos\/Telintec_files_departments\/RH",
-      "files_quizz_out": "files\/quizz_out\/"
+      "files_quizz_out": "files\/quizz_out\/",
+      "url_shrpt": "https://telintec698.sharepoint.com",
+      "folder_rrhh": "/sites/RRHHSP/",
+      "folder_nominas": "DocsNominas"
     },
     "default": {
       "theme": "morph"
