--- a/files/settings.json
+++ b/files/settings.json
@@ -6,6 +6,7 @@
   "sampling_time": 1,
   "filepath_notifications": "files\/notifications.txt",
   "time_window": 5,
+  "url_auth_api": "https://ec2-18-119-125-94.us-east-2.compute.amazonaws.com/AuthAPI/api/v1/auth/loginUP",
   "gui": {
     "null": {
       "theme": "litera"
