--- a/files/settings.json
+++ b/files/settings.json
@@ -7,6 +7,8 @@
   "filepath_notifications": "files\/notifications.txt",
   "time_window": 5,
   "url_auth_api": "https://ec2-18-119-125-94.us-east-2.compute.amazonaws.com/AuthAPI/api/v1/auth/loginUP",
+  "temp_filepath_xml": "files/temp_xml.xml",
+  "temp_filepath_pdf": "files/temp_pdf.pdf",
   "gui": {
     "null": {
       "theme": "litera"
@@ -22,7 +24,7 @@
       "files_quizz_out": "files\/quizz_out\/",
       "url_shrpt": "https://telintec698.sharepoint.com",
       "folder_rrhh": "/sites/RRHHSP/",
-      "folder_nominas": "DocsNominas"
+      "folder_nominas": "Documentos compartidos\/DocsNominas"
     },
     "default": {
       "theme": "morph"
