update(folio-endpoint): add folio endpoint, add frame crear contratos

--- a/static/ventanasAppGUI.json
+++ b/static/ventanasAppGUI.json
@@ -38,7 +38,8 @@
       "Cotizaciones",
       "Documentos Contrato",
       "Control Saldos",
-      "Remisiones"
+      "Remisiones",
+      "Crear Contratos"
     ],
     "App.Department.Common": [
       "Tasks"
