--- a/files/settings.json
+++ b/files/settings.json
@@ -9,6 +9,10 @@
   "url_auth_api": "https://ec2-18-119-125-94.us-east-2.compute.amazonaws.com/AuthAPI/api/v1/auth/loginUP",
   "temp_filepath_xml": "files/temp_xml.xml",
   "temp_filepath_pdf": "files/temp_pdf.pdf",
+  "pattern_pdf_contract": "_______________________________ _______________________________ _______________________________ _________",
+  "phrase_pdf_contract": "contiene los siguientes servicios:",
+  "pattern_pdf_contract_default": "_______________________________ _______________________________ _______________________________ _________",
+  "phrase_pdf_contract_default": "contiene los siguientes servicios:",
   "gui": {
     "null": {
       "theme": "litera"
