--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 /files/dpb_chache/
-/files/Ternium*
-/files/*.pkl
+
 /scripts_db_handle/fill_exams.py
 /scripts_db_handle/fill_fichajes.py
 /files/OCT*
 /files/*.*
-/files/*.csv
-/files/*.xml
 /files/fichaje*.xlsx
 *csv
 /scripts_db_handle/Fill_Vacations.py
@@ -21,13 +18,12 @@ __pycache__/
 /dist/
 /build/
 /venv/
-/files/contracts/*
-/files/logs/*
-/files/quizz_out/*
+/files/contracts/*.*
+/files/logs/*.*
+/files/quizz_out/*.*
 /app_gui.exe
 /files/samplev2.pdf
-/files/*.pdf
-/files/files_fichaje/*
+/files/files_fichaje/*.*
 .env_*
 /tester_code.py
 /scripts_db_handle/fill_sm_dummy_data.py
