update(admin-endpoints): deploy update almacen

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,14 @@ __pycache__/
 *.py[cod]
 *$py.class
 /files/dpb_chache/
+/files/Ternium*
+/files/*cache.pkl
 /scripts_db_handle/fill_exams.py
 /scripts_db_handle/fill_fichajes.py
 /files/OCT*
-/files/*\.*
+/files/*cache*
+/files/*.csv
+/files/*.xml
 /files/fichaje*.xlsx
 *csv
 /scripts_db_handle/Fill_Vacations.py
@@ -17,16 +21,21 @@ __pycache__/
 /dist/
 /build/
 /venv/
-/files/contracts/*.*
-/files/logs/*.*
-/files/quizz_out/*.*
+/files/contracts/*.pdf
+/files/logs/*.txt
+/files/quizz_out/*.json
+/files/quizz_out/*.pdf
+/files/quizz_out/*.xlsx
+/files/quizz_out/*.csv
 /app_gui.exe
 /files/samplev2.pdf
-/files/files_fichaje/*.*
+/files/*.pdf
+/files/files_fichaje/*
 .env_*
 /tester_code.py
 /scripts_db_handle/fill_sm_dummy_data.py
-/files/Pmodels/*
+/files/Pmodels/*.pkl
+/files/Pmodels/*.keras
 /test.json
 /scripts_db_handle/
 /domain.crt
