--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 Flask-SQLAlchemy~=3.1.1
 Flask~=2.3.3
-mysql-connector-python~=8.2.0
+mysql-connector-python~=9.1.0
 python-dotenv~=1.0.0
 flask-restx~=1.2.0
 PyJWT~=2.8.0
 numpy~=1.26.2
-requests~=2.31.0
+requests~=2.32.3
 Flask-Cors~=4.0.1
 ttkbootstrap~=1.10.1
 dropbox~=11.36.2
@@ -32,4 +32,5 @@ WTForms-JSON~=0.3.5
 xlsxwriter
 PyPDF2~=3.0.1
 openpyxl
-pyserial
+pyserial~=3.5
+PyMuPDF
