update(frame-purchase-admin): add frame-purchases-admin

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ __pycache__/
 /files/nominas_index.json
 /files/inventario.xlsx
 .vscode/*
+/Tests_apis.py
+/tester2.py
+/FO-ALM-*.xlsx
+/swager_specs.json
+/files/test_result.txt
