--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ Pillow~=10.1.0
 openai~=1.22.0
 bardapi~=0.1.38
 SQLAlchemy~=2.0.23
-reportlab~=4.1.0
+reportlab
 setuptools
 keras~=3.3.3
 tensorflow~=2.16.1
