update(almacen): update almacen resources for token requirement

--- a/.gitignore
+++ b/.gitignore
@@ -45,9 +45,10 @@ __pycache__/
 /files/nominas_index.json
 /files/inventario.xlsx
 .vscode/*
-/Tests_apis.py
+/Tests/Tests_apis_almacen.py
 /tester2.py
 /FO-ALM-*.xlsx
 /swager_specs.json
 /files/test_result.txt
 /templates/forms/barcodes.pdf
+/Tests/
