update(apis): update datetime format for utc-6

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,37 @@
 Flask-SQLAlchemy~=3.1.1
-Flask~=2.3.3
-mysql-connector-python~=8.3.0
-python-dotenv~=1.0.0
-flask-restx~=1.2.0
-PyJWT~=2.8.0
-numpy~=1.26.2
-requests~=2.32.3
-Flask-Cors~=4.0.1
-ttkbootstrap~=1.10.1
-dropbox~=11.36.2
+Flask
+mysql-connector-python
+python-dotenv
+flask-restx
+PyJWT
+numpy
+requests
+Flask-Cors
+ttkbootstrap
+dropbox
 xlrd~=2.0.1
-pandas~=2.1.3
+pandas
 Unidecode~=1.3.7
-matplotlib~=3.8.1
+matplotlib
 pyxlsb~=1.0.10
-customtkinter~=5.2.1
-Pillow~=10.1.0
-openai~=1.22.0
-bardapi~=0.1.38
+customtkinter
+Pillow
+openai
+bardapi
 SQLAlchemy~=2.0.23
 reportlab
 setuptools
-keras~=3.3.3
+keras
 tensorflow~=2.16.1
 scikit-learn~=1.5.0
-Office365-REST-Python-Client~=2.5.11
-Werkzeug~=2.3.8
+Office365-REST-Python-Client
+Werkzeug
 Flask-WTF
-WTForms~=3.1.2
-WTForms-JSON~=0.3.5
+WTForms
+WTForms-JSON
 xlsxwriter
-PyPDF2~=3.0.1
+PyPDF2
 openpyxl
-pyserial~=3.5
+pyserial
 PyMuPDF
+pytz
