update(app-gui): common frame
update task frame, add misc task endpoint, rrhh/quizzes & rrhh/download/quizz/report

--- a/files/settings.json
+++ b/files/settings.json
@@ -29,7 +29,8 @@
       "files_quizz_out": "files\/quizz_out\/",
       "url_shrpt": "https://telintec698.sharepoint.com",
       "folder_rrhh": "/sites/RRHHSP/",
-      "folder_nominas": "Documentos compartidos\/DocsNominas"
+      "folder_nominas": "Documentos compartidos\/DocsNominas",
+      "folder_checador": "RELACION CHECADOR TELINTEC"
     },
     "default": {
       "theme": "morph"
