update(app-gui): sm apis
epp inventory update

--- a/files/settings.json
+++ b/files/settings.json
@@ -48,12 +48,14 @@
     "dates_emision": {
       "1": "2024-08-05",
       "2": "06-03-2025",
-      "3": "2024-08-22"
+      "3": "2024-08-22",
+      "4": "2024-06-14"
     },
     "dict_codes_forms": {
       "1": "FO-GRH-08 R1",
       "2": "FO-ALM-03 R3",
-      "3": "FO-PRE-01 R1"
+      "3": "FO-PRE-01 R1",
+      "4": "FO-ALM-01 R1"
     }
   }
 }
