update(app-gui): update
file form vouchers

--- a/files/settings.json
+++ b/files/settings.json
@@ -49,13 +49,17 @@
       "1": "2024-08-05",
       "2": "06-03-2025",
       "3": "2024-08-22",
-      "4": "2024-06-14"
+      "4": "2024-06-14",
+      "5": "2025-04-11",
+      "6": "2025-01-20"
     },
     "dict_codes_forms": {
       "1": "FO-GRH-08 R1",
       "2": "FO-ALM-03 R3",
       "3": "FO-PRE-01 R1",
-      "4": "FO-ALM-01 R1"
+      "4": "FO-ALM-01 R1",
+      "5": "FO-SST-07 R3",
+      "6": "FO-ALM-02 R2"
     }
   }
 }
